# HistoryHound

./: .cursorrules  .gitignore  Development_log.md  LICENSE  README.md  SECURITY.md  debug_browser_detection.py  extension_integration_test.html  pyproject.toml  pytest.ini  requirements.txt  test_fastmcp_client.py  test_fastmcp_direct.py  test_fastmcp_simple.py  test_fastmcp_websocket.py  test_github_search.py  test_real_browser_history.py  test_source_links.py  test_vector_store_update.py
extension/: INSTALL.md  README.md  TESTING.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  quick_test.html  settings.html  settings.js  sidepanel.html  sidepanel.js  test_extension.html  test_extension.js  test_sidepanel.html  test_sync_fix.html  validate_extension.js
historyhounder/: cli.py  content_fetcher.py  extract_chrome_history.py  history_extractor.py  pipeline.py  search.py  server.py  utils.py  vector_store.py
tests/: conftest.py  real_world_urls.txt  test_brave_browser.py  test_cli_ignore.py  test_cli_integration.py  test_content_fetcher.py  test_cross_platform_browsers.py  test_embedder.py  test_enhanced_qa_integration.py  test_extract_chrome_history.py  test_history_extractor.py  test_mcp_server.py  test_ollama_qa.py  test_pipeline.py  test_prompt_quality_comparison.py  test_search.py  test_security.py  test_server.py  test_server_api_integration.py  test_source_links.py  test_temporal_filtering.py  test_timestamp_integration.py  test_vector_store.py  test_vector_store_integration.py
tmp/: QA_Response_Quality_Improvement_Plan.md  (+3 more)
(+8 files in other folders)
